--- a/style.css
+++ b/style.css
@@ -52,3 +52,19 @@ body {
     font-size: 16px;
     color: white;
   }
+
+  .thank-you-card {
+    background-color: #333;
+    border: 1px solid #0F0;
+    border-radius: 5px;
+    padding: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+  
+  .thank-you-card p {
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+  }
+  
