--- a/style.css
+++ b/style.css
@@ -80,21 +80,21 @@ body {
   }
   
   .skill {
-    width: 200px;
+    width: 600px;
     margin-bottom: 20px;
     padding: 10px;
     background-color: #333;
-    border: 1px solid #0F0;
+    border: 1px solid rgb(113, 171, 113);
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   }
   
   .skill h3 {
-    font-size: 20px;
-    color: white;
+    font-size:  14px;
+    color: rgb(220, 139, 139);
     text-align: center;
-    padding: 10px 0;
-    background-color: #0F0;
+    padding: 4px 0;
+    background-color: rgb(40, 107, 40);
   }
   
   .skill p {
