--- a/style.css
+++ b/style.css
@@ -101,3 +101,35 @@ body {
     font-size: 16px;
     color: white;
   }
+
+  /* CSS */
+.sidebar {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    width: 200px;
+    background-color: #fff;
+    padding: 20px;
+    z-index: 100;
+  }
+  
+  .sidebar ul {
+    list-style: none;
+    padding: 0;
+  }
+  
+  .sidebar li {
+    margin-bottom: 10px;
+  }
+  
+  .sidebar a {
+    text-decoration: none;
+    color: #000;
+    font-size: 16px;
+  }
+  
+  .sidebar a:hover {
+    color: #333;
+  }
+  
